# chebApprox

./: README.md  cabal.project.local  chebApprox.cabal  chebTyping.hs  chebyshev.hs  stack.yaml
src/: ChebApproxAcc.hs  ChebMath.hs  ChebTest.hs  ChebTyping.hs  ChebTypingAcc.hs  ChebyshevApproximations.hs  HedgehogTest.hs  Test.hs
test/: Test.hs
